Revelation changelog

---------------[ xxxx-xx-xx : 0.4.1 ]---------------

2005-02-04  Erik Grinaker <erikg@codepoet.no>

	* preference, password generator and search dialogs are no
	longer modal

	* check password strength while entered, using cracklib

2005-02-03  Erik Grinaker <erikg@codepoet.no>

	* added option for autolocking file when inactive

2005-02-02  Erik Grinaker <erikg@codepoet.no>

	* ask user to reload file if it is changed outside revelation


---------------[ xxxx-xx-xx : 0.4.0 ]---------------

2005-02-02  Erik Grinaker <erikg@codepoet.no>

	* set default button of "overwrite file?" dialog to Cancel

	* use STOCK_OVERWRITE instead of STOCK_OK for overwrite dialog

	* added plain text datahandler


---------------[ 2005-02-01 : 0.4.0-pre2 ]---------------

2005-02-01  Erik Grinaker <erikg@codepoet.no>

	* fixed a crasher bug when undoing an entry drag/drop under
	certain circumstances

	* wrote remaining ui module unit tests

2005-01-29  Erik Grinaker <erikg@codepoet.no>

	* check for fd.o shared MIME utils at build-time, and avoid
	rebuilding MIME databases if not found

	* don't update MIME databases at build-time if DESTDIR is set

	* more ui module unit tests

2005-01-28  Erik Grinaker <erikg@codepoet.no>

	* run update-desktop-database on make install so that
	revelation is registered as handler for application/x-revelation
	MIME type

2005-01-26  Erik Grinaker <erikg@codepoet.no>

	* fix typo in mimetype icon installation path

2005-01-25  Erik Grinaker <erikg@codepoet.no>

	* build authmanager module with position-independent code

	* don't install authmanager into bindir

	* use Utility category for .desktop file (put into
	Accessories category in GNOME menu)

	* wrote more ui module unit tests

	* fixed a treeview drag'n'drop bug which broke dropping into
	folders directly before or after the source entry


---------------[ 2005-01-24 : 0.4.0-pre1 ]---------------

2005-01-24  Erik Grinaker <erikg@codepoet.no>
