@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.1 ]---------------
 
+2005-02-05  Erik Grinaker <erikg@codepoet.no>
+
+	* monitor events on preference, password generator and search
+	dialogs
+
 2005-02-04  Erik Grinaker <erikg@codepoet.no>
 
 	* preference, password generator and search dialogs are no
